# Kataglyphis-BeschleunigerBallett

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile.in  README.md  buildEngine.bat  buildEngine.sh  pyproject.toml  requirements.txt
.github/actions/install-deps/: action.yml
.github/workflows/: Linux.yml  Linux_arm.yml  Linux_x86.yml  Windows.yml
ExternalLib/: CMakeLists.txt
Scripts/Linux/: setup-dependencies.sh
Scripts/Windows/: setup-dependencies.ps1
Src/: CMakeLists.txt
Src/GraphicsEngineOpenGL/: CMakeLists.txt
Src/GraphicsEngineOpenGL/app/: App.cpp
Src/GraphicsEngineOpenGL/camera/: Camera.cpp  Camera.hpp
Src/GraphicsEngineOpenGL/compute/: ComputeShaderProgram.cpp  ComputeShaderProgram.hpp
Src/GraphicsEngineOpenGL/debug/: DebugApp.cpp  DebugApp.hpp
Src/GraphicsEngineOpenGL/gui/: GUI.cpp  GUI.hpp
Src/GraphicsEngineOpenGL/renderer/: RenderPassSceneDependend.hpp  Renderer.cpp  Renderer.hpp  ShaderIncludes.cpp  ShaderIncludes.hpp  ShaderProgram.cpp  ShaderProgram.hpp
Src/GraphicsEngineOpenGL/scene/: AABB.cpp  AABB.hpp  GameObject.cpp  GameObject.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ObjLoader.cpp  ObjLoader.hpp  ObjMaterial.cpp  ObjMaterial.hpp  Quad.cpp  Quad.hpp  Rotation.hpp  Scene.cpp  Scene.hpp  Vertex.hpp  ViewFrustumCulling.cpp  ViewFrustumCulling.hpp
Src/GraphicsEngineOpenGL/util/: File.cpp  File.hpp  RandomNumbers.cpp  RandomNumbers.hpp
Src/GraphicsEngineOpenGL/window/: Window.cpp  Window.hpp
Src/GraphicsEngineVulkan/: CMakeLists.txt  Main.cpp
Src/GraphicsEngineVulkan/app/: App.cpp  App.hpp
Src/GraphicsEngineVulkan/common/: FormatHelper.hpp  Globals.hpp  MemoryHelper.hpp  Utilities.hpp
Src/GraphicsEngineVulkan/gui/: GUI.cpp  GUI.hpp
Src/GraphicsEngineVulkan/memory/: Allocator.cpp  Allocator.hpp
Src/GraphicsEngineVulkan/renderer/: CommandBufferManager.cpp  CommandBufferManager.hpp  GUIRendererSharedVars.hpp  GlobalUBO.hpp  PathTracing.cpp  PathTracing.hpp  PostStage.cpp  PostStage.hpp  QueueFamilyIndices.hpp  Rasterizer.cpp  Rasterizer.hpp  Raytracing.cpp  (+6 more)
Src/KomputePlayground/: CMakeLists.txt
Test/compile/: CMakeLists.txt
Test/fuzz/: CMakeLists.txt
Test/perf/: CMakeLists.txt
Testing/: TAG
Testing/20250602-0529/: Test.xml
cmake/: CPackOptions.cmake  Cache.cmake  ProjectOptions.cmake  SystemLibDependencies.cmake  Tests.cmake
docker/windows/: Dockerfile
docs/source/: README.md  conf.py  index.rst
(+95 files in other folders)
